--- a/1in2.html
+++ b/1in2.html
@@ -7,20 +7,19 @@
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="security-bridge.js"></script>
-<script src="ui-bridge.js"></script>
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&family=Orbitron:wght@900&display=swap');
-body { background:#000;color:#eff3f4;font-family:'Inter',sans-serif }
+body { background:#000;color:#eff3f4;font-family:'Inter',sans-serif;-webkit-font-smoothing:antialiased; }
 .font-chirp{font-weight:900;letter-spacing:-0.04em}
 .orbitron{font-family:'Orbitron',sans-serif}
-.glass-panel{background:rgba(255,255,255,.03);border:1px solid rgba(255,255,255,.08);border-radius:1.5rem}
-.slot-circle{width:85px;height:85px;border-radius:1rem;border:1px solid rgba(255,255,255,.1);display:flex;align-items:center;justify-content:center;background:rgba(255,255,255,.02)}
-.slot-filled{background:#fff;border-color:#fff}
-.btn-join{background:#fff;color:#000}
-.btn-arena-locked{background:#111;color:#555;border:1px solid #222}
-.btn-arena-ready{background:red;color:#fff;box-shadow:0 0 20px rgba(255,0,0,.4)}
+.glass-panel{background:rgba(255,255,255,.03);border:1px solid rgba(255,255,255,.08);border-radius:1.5rem;padding:2rem;}
+.slot-circle{width:85px;height:85px;border-radius:1rem;border:1px solid rgba(255,255,255,.1);display:flex;align-items:center;justify-content:center;background:rgba(255,255,255,.02);transition:0.3s;}
+.slot-filled{background:#fff;border-color:#fff;box-shadow:0 0 20px rgba(255,255,255,.15);}
+.btn-join{background:#fff;color:#000;transition:0.3s;}
+.btn-join:disabled{opacity:0.4;cursor:not-allowed;}
+.btn-arena-locked{background:#111;color:#555;border:1px solid #222;}
+.btn-arena-ready{background:red;color:#fff;box-shadow:0 0 20px rgba(255,0,0,.4);}
 </style>
 </head>
 
@@ -33,24 +32,36 @@ body { background:#000;color:#eff3f4;font-family:'Inter',sans-serif }
 <span id="count_display" class="orbitron text-sm bg-white/10 px-3 py-1 rounded">0/2</span>
 </div>
 
+<!-- ARENA IMAGE -->
+<div class="mb-6">
+  <div class="h-48 bg-cover bg-center rounded-2xl border-b-2 border-red-600"
+       style="background-image:url('https://i.ibb.co/FbCS1n9p/IMG-2638.jpg');"></div>
+  <div class="py-4 flex justify-between items-start">
+    <div>
+      <h1 class="text-2xl font-chirp uppercase leading-none italic">Trial Broiler</h1>
+      <p class="text-red-500 text-[9px] font-black uppercase tracking-[0.2em] mt-2">1v1 Continuous Weight Duel</p>
+    </div>
+  </div>
+</div>
+
 <!-- SLOTS -->
-<div class="glass-panel p-8 mb-8">
-<div class="flex gap-8 justify-center">
-<div>
-<div id="slot-0" class="slot-circle"></div>
-<span id="name-0" class="text-[10px] uppercase text-zinc-500">OPEN SLOT</span>
-</div>
-<div class="orbitron text-zinc-800">VS</div>
-<div>
-<div id="slot-1" class="slot-circle"></div>
-<span id="name-1" class="text-[10px] uppercase text-zinc-500">OPEN SLOT</span>
-</div>
-</div>
+<div class="glass-panel mb-8">
+  <div class="flex gap-8 justify-center items-center">
+    <div class="flex flex-col items-center gap-2">
+      <div id="slot-0" class="slot-circle"></div>
+      <span id="name-0" class="text-[10px] uppercase text-zinc-500">OPEN SLOT</span>
+    </div>
+    <div class="orbitron text-zinc-800 font-black text-xl">VS</div>
+    <div class="flex flex-col items-center gap-2">
+      <div id="slot-1" class="slot-circle"></div>
+      <span id="name-1" class="text-[10px] uppercase text-zinc-500">OPEN SLOT</span>
+    </div>
+  </div>
 </div>
 
 <!-- BUTTONS -->
 <div class="grid grid-cols-2 gap-3">
-<button id="joinBtn" class="py-5 btn-join rounded-xl font-chirp uppercase" onclick="joinLobby()">Join Lobby</button>
+<button id="joinBtn" class="py-5 btn-join rounded-xl font-chirp uppercase">Join Lobby</button>
 <button id="arenaBtn" class="py-5 btn-arena-locked rounded-xl font-chirp uppercase" disabled>Arena Locked</button>
 </div>
 
@@ -64,82 +75,100 @@ let currentUser = null;
 let isProcessing = false;
 
 /* INIT */
-async function init(){
-const { data:{session} } = await sb.auth.getSession();
-if(!session){ location.href="login.html"; return; }
+async function init() {
+  const { data: { session } } = await sb.auth.getSession();
+  if (!session) { location.href="login.html"; return; }
 
-currentUser = {
-id: session.user.id,
-username: session.user.user_metadata.username
-};
+  currentUser = {
+    id: session.user.id,
+    username: session.user.user_metadata.username
+  };
 
-await loadLobby();
-subscribeRealtime();
+  await loadLobby();
+  setupJoinButton();
 }
 
 /* LOAD DATA */
-async function loadLobby(){
-const { data:lg } = await sb.from('leagues').select('*').eq('name',LEAGUE_NAME).single();
-league = lg;
+async function loadLobby() {
+  const { data: lg } = await sb.from('leagues').select('*').eq('name', LEAGUE_NAME).single();
+  league = lg;
 
-const { data } = await sb.from('league_players')
-.select('*')
-.eq('league_id',league.id)
-.order('joined_at',{ascending:true});
+  const { data } = await sb.from('league_players')
+    .select('*')
+    .eq('league_id', league.id)
+    .order('joined_at', { ascending: true });
+  
+  players = data || [];
+  render();
+  subscribeRealtime();
+}
 
-players = data || [];
-render();
+/* RENDER UI */
+function render() {
+  document.getElementById("count_display").innerText = `${players.length}/${league.max_players}`;
+
+  for (let i=0; i<2; i++) {
+    const slot = document.getElementById(`slot-${i}`);
+    const name = document.getElementById(`name-${i}`);
+    const p = players[i];
+
+    if(p){
+      slot.classList.add("slot-filled");
+      slot.innerHTML = `<span class="text-black font-black text-2xl">${p.username[0].toUpperCase()}</span>`;
+      name.innerText = p.username;
+      name.className="text-[10px] uppercase text-white";
+    } else {
+      slot.classList.remove("slot-filled");
+      slot.innerHTML="";
+      name.innerText="OPEN SLOT";
+      name.className="text-[10px] uppercase text-zinc-500";
+    }
+  }
+
+  const joined = players.some(p=>p.user_id===currentUser.id);
+  const joinBtn = document.getElementById("joinBtn");
+  joinBtn.disabled = joined || players.length>=league.max_players;
+  joinBtn.innerText = joined ? "Lobby Joined" : (players.length>=league.max_players ? "Lobby Full" : "Join Lobby");
+
+  const arenaBtn = document.getElementById("arenaBtn");
+  arenaBtn.disabled = !joined;
+  arenaBtn.className = joined ? "py-5 btn-arena-ready rounded-xl font-chirp uppercase" : "py-5 btn-arena-locked rounded-xl font-chirp uppercase";
 }
 
 /* JOIN */
-async function joinLobby(){
-if(isProcessing) return;
-isProcessing=true;
+function setupJoinButton(){
+  document.getElementById("joinBtn").addEventListener("click", async () => {
+    if(isProcessing) return;
+    isProcessing = true;
 
-if(players.some(p=>p.user_id===currentUser.id)){ isProcessing=false; return; }
-if(players.length>=league.max_players){ alert("Lobby Full"); isProcessing=false; return; }
+    if(players.some(p=>p.user_id===currentUser.id)) { isProcessing=false; return; }
+    if(players.length>=league.max_players) { alert("Lobby Full"); isProcessing=false; return; }
 
-await sb.from('league_players').insert({
-league_id: league.id,
-user_id: currentUser.id,
-username: currentUser.username
-});
+    const { error } = await sb.from('league_players').insert({
+      league_id: league.id,
+      user_id: currentUser.id,
+      username: currentUser.username
+    });
 
-await loadLobby();
-isProcessing=false;
-}
+    if(error) { alert("Join Failed: " + error.message); isProcessing=false; return; }
 
-/* UI */
-function render(){
-document.getElementById("count_display").innerText = `${players.length}/${league.max_players}`;
-
-for(let i=0;i<2;i++){
-const slot=document.getElementById(`slot-${i}`);
-const name=document.getElementById(`name-${i}`);
-const p=players[i];
-
-if(p){
-slot.classList.add("slot-filled");
-slot.innerHTML=`<span class="text-black font-black">${p.username[0]}</span>`;
-name.innerText=p.username;
-name.className="text-[10px] uppercase text-white";
-}else{
-slot.classList.remove("slot-filled");
-slot.innerHTML="";
-name.innerText="OPEN SLOT";
-name.className="text-[10px] uppercase text-zinc-500";
-}
-}
-
-const joined = players.some(p=>p.user_id===currentUser.id);
-document.getElementById("joinBtn").disabled = joined || players.length>=2;
+    await loadLobby();
+    isProcessing = false;
+  });
 }
 
 /* REALTIME */
+let subscription = null;
 function subscribeRealtime(){
-sb.channel("league-1in2")
-.on('postgres_changes',{event:'*',schema:'public',table:'league_players',filter:`league_id=eq.${league.id}`},loadLobby)
-.subscribe();
+  if(subscription) { subscription.unsubscribe(); subscription=null; }
+  subscription = sb.channel("league-"+LEAGUE_NAME)
+    .on('postgres_changes', {
+      event:'*',
+      schema:'public',
+      table:'league_players',
+      filter:`league_id=eq.${league.id}`
+    }, loadLobby)
+    .subscribe();
 }
 
 init();
