--- a/1in2.html
+++ b/1in2.html
@@ -70,8 +70,8 @@ body { background:#000;color:#eff3f4;font-family:'Inter',sans-serif;-webkit-font
 <script>
 // === INIT SUPABASE CLIENT ===
 const sb = supabase.createClient(
-  "YOUR_SUPABASE_URL",
-  "YOUR_SUPABASE_ANON_KEY"
+  "https://tbvmgcknkwsucstedigd.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q"
 );
 
 const LEAGUE_NAME = "1in2";
